--- a/Scripts/data_preparation.Rmd
+++ b/Scripts/data_preparation.Rmd
@@ -10,7 +10,7 @@ source(here::here('./Functions/function_list.R'))
 
 load_pkg(c(
   # For grid estimation and species selection
-  "spatialEco","tidyverse", "geosphere","raster","units","matrixStats","sf",
+  "spatialEco","tidyverse", "geosphere","raster","units","matrixStats","sf","rmapshaper",
   # For collaborative ease
   "here"
   ))
@@ -24,53 +24,58 @@ sf::sf_use_s2(use_s2 = FALSE)
 
 # Identify grids that are MPAs or surrounding an MPA
 
-## Load the data into R 
+## load the data into R 
 
-```{r load_data}
-MPA1 <- read_sf(here("./Data/Spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_0/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
+```{r}
+MPA1 <- read_sf(here("./Data/spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_0/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
 #plot(MPA1)
 
 MPA2 <- read_sf(here("./Data/spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_1/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
 
 MPA3 <- read_sf(here("./Data/spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_2/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
 
-mpa_sf <- dplyr::bind_rows(list(MPA1, MPA2, MPA3))
+MPA <- dplyr::bind_rows(list(MPA1, MPA2, MPA3))
 crs <- "+init=epsg:4326"
 
+rm(MPA1, MPA2, MPA3)
+
 ```
 
-## Dissolve so that they are not overlapping 
-This is necessary for the area calculation. Here is where you would select out just the Marine (2 or the marine and coastal, 2 and 1). You can also select out just the no take here. 
-
+#dissolve so that they are not overlapping 
+This is necessary for the area calculation 
+Here is where you would select out just the Marine (2 or the marine and coastal, 2 and 1)
+You can also select out just the no take here. 
 ```{r}
 
-mpa_sf$to_dissolve <- "A"
+MPA_dissolve2 <- ms_simplify(MPA, keep = 0.005,
+                                keep_shapes = FALSE)
+MPA_dissolve2$ID <- as.character(1:nrow(MPA_dissolve2))
 
-mpa_dissolve <- mpa_sf %>% 
-  group_by(to_dissolve) %>% 
-  summarize() %>% 
-  st_transform(crs = st_crs(crs))
-  
+ggplot() + 
+  geom_sf(data = MPA_dissolve2, aes(fill = ID))
 
-#ggplot() + geom_sf(data = MPA, aes(fill = NO_TAKE)) + 
-  #geom_sf(data = MPA_dissolve, fill = NA, colour = "red")
+Mode <- function(x) {
+ ux <- unique(x)
+ ux[which.max(tabulate(match(x, ux)))]
+}
+
 ```
 
-## which gridcells overlap with an MPA (and what is the area of that gridcell that contains and MPA)
+##which gridcells overlap with an MPA (and what is the area of that gridcell that contains and MPA)
 
 ```{r}
-# Load grid
-grid <- read_sf(here("./Data/spatial/worldsq_EA.shp")) %>% 
-  # convert grid coordinate system to be same as lat long WGS_1984
-  st_transform(grid, crs = st_crs(crs))
+grid <- read_sf(here("./Data/spatial/worldsq_EA.shp"))
+
+#convert grid coordinate system to be same as lat long WGS_1984
+grid <- st_transform(grid, crs = st_crs(crs))
 
 #this tells you which gridcells intersect with an MPA and what area of the gridcell is covered 
-grid_intersection <- st_intersection(grid, mpa_dissolve) %>% 
+grid_intersection <- st_intersection(grid, MPA_dissolve2) %>% 
   group_by(Seq) %>% 
-  summarise(geom = st_union(geometry)) %>%
+  summarise(geom = st_union(geometry), MPA_ID = Mode(ID)) %>%
   mutate(geom = st_sfc(geom),
          area = st_area(geom))
-
+rm(MPA_dissolve2)
 grid_intersection$status <- "protected" #lets us know that those grid cells have some level of MPA wiithin them 
 
 #join this back to the big grid (right now we just have the gridIDs that are overlapping an MPA)
@@ -104,57 +109,53 @@ grid_sp <- st_as_sf(gridpoints, coords = c("long", "lat"), crs = st_crs(crs))
 #figure out surrounding grids 
 ```{r}
 grid_sp_MPA <- grid_sp %>% dplyr::filter(status == "protected")
-st_crs(grid_sp_MPA) <- NA
+#st_crs(grid_sp_MPA) <- NA
 grid_sp_no_MPA <- grid_sp %>% dplyr::filter(is.na(status))
-st_crs(grid_sp_no_MPA) <- NA
+#st_crs(grid_sp_no_MPA) <- NA
 
 grid_MPA <- gridpoints %>% dplyr::filter(status == "protected")
 grid_no_MPA <- gridpoints %>% dplyr::filter(is.na(status))
 
+#within a buffer distance to MPAs
 
-dist <- st_distance(grid_sp_no_MPA, grid_sp_MPA) #calculate all of the distances 
-colnames(dist) <- grid_sp_MPA$Seq #column names are the protected gridIDs
+buffer <- st_buffer(grid_sp_MPA,.75)
 
-mins <- rowMins(dist, na.rm = T)
-dist_n <- as.data.frame(mins)
-dist_n$assoc_ID <- apply(dist, 1, function(x) colnames(dist)[which.min(x)]) #find which one they are closest to - need to know for proportion calc later on
+intr <- st_intersection(grid_sp_no_MPA, buffer, sparse = F)
+intr <- intr[colnames(intr) %in% c(colnames(grid_sp_no_MPA), "MPA_ID.1")]
+intr$status <- "surrounding"
 
-dist_n$Seq <- grid_sp_no_MPA$Seq
+ggplot() + geom_sf(buffer, mapping = aes(colour = "buffer")) + #geom_sf(subset(grid2, grid2$status == "protected"), mapping = aes(fill = protected_area_m2))+ geom_sf(grid_intersection, mapping = aes(colour = "MPA")) + geom_sf(intr, mapping = aes(colour = "surrounding")) 
 
+dist_touching <-intr
+dist_touching <- dist_touching %>% add_count(MPA_ID.1) %>% mutate("prop" = (1/n) + 1) #this is the gridcell with an MPA that they are closest to 
 
-dist_touching <- subset(dist_n, dist_n$mins < .75)
-dist_touching <-left_join(dist_touching, grid_no_MPA, by = "Seq")
-dist_touching <- dist_touching %>% add_count(assoc_ID) %>% mutate("prop" = (1/n) + 1)
-
-# ggplot() +
-#   geom_point(data = grid_MPA, aes(x = Lon, y = Lat), size = .2, colour = "red") + 
-#   geom_point(data = dist_touching, aes(x = long, y = lat), size = .2, colour = "blue")
+```
 
 
 
 #ookay that seemed to work 
-```
+
+
 #### Clean up the dataset 
 
 ```{r}
-dist_touching$status <- "surrounding"
-dist_touching <- dist_touching %>% dplyr::select(-mins, -n, -assoc_ID)
 grid_MPA$prop <- 0
 grid_MPA$status <- "protected"
 
-pt <- rbind(dist_touching, grid_MPA)
+names <- c("Seq", "Lat", "Lon", "area", "status", "prop", "protected_area_m2")
 
-grid_final <- left_join(gridpoints, pt, by = c("Seq","long", "lat"))
+grid_MPA <- grid_MPA[colnames(grid_MPA) %in% names]
+dist_touching <- as.data.frame(dist_touching)
+dist_touching <- dist_touching[colnames(dist_touching) %in% names]
 
+pt <- rbind(as.data.frame(dist_touching), as.data.frame(grid_MPA))
 
-#checkit 
-ggplot() +
-  geom_point(data = grid_MPA, aes(x = Lon, y = Lat), size = .2, colour = "red") + 
-  geom_point(data = dist_touching, aes(x = long, y = lat), size = .2, colour = "blue") +
-  geom_tile(data = grid_final, aes(x = long, y = lat, fill = status.y), size = .2, colour = "black")+ 
-  coord_sf(xlim=c(-35, -30), ylim=c(40,45), expand = TRUE)
+gridpoints <- gridpoints[colnames(gridpoints) %in% c("Seq","Lon", "Lat")]
 
-grid_final <-grid_final %>% dplyr::select(Seq, Lat.x, Lon.y, area.x, protected_area_m2.x, status.y, prop)
+grid_final <- left_join(gridpoints, pt, by = c("Seq","Lon", "Lat"))
+grid_final <- grid_final %>% distinct() #some of the 
+
+#grid_final %>% dplyr::filter(status %in% c("protected", "surrounding")) %>% ggplot() + geom_point(aes(x = Lon, y = Lat, colour = as.factor(prop)))
 
 write.csv(grid_final, here("./Data/mpa_scenarios/grid_all_mpas.csv"))
 ```
