--- a/Scripts/data_preparation.Rmd
+++ b/Scripts/data_preparation.Rmd
@@ -10,7 +10,7 @@ source(here::here('./Functions/function_list.R'))
 
 load_pkg(c(
   # For grid estimation and species selection
-  "spatialEco","tidyverse", "geosphere","raster","units","matrixStats","sf","rmapshaper",
+  "spatialEco","tidyverse", "geosphere","raster","units","matrixStats","sf","rmapshaper", "igraph",
   # For collaborative ease
   "here"
   ))
@@ -27,17 +27,19 @@ sf::sf_use_s2(use_s2 = FALSE)
 ## load the data into R 
 
 ```{r}
-MPA1 <- read_sf(here("./Data/spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_0/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
+MPA1 <- read_sf(here("./Data/Spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_0/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
 #plot(MPA1)
 
-MPA2 <- read_sf(here("./Data/spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_1/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
+MPA2 <- read_sf(here("./Data/Spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_1/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
 
-MPA3 <- read_sf(here("./Data/spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_2/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
+MPA3 <- read_sf(here("./Data/Spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_2/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
 
 MPA <- dplyr::bind_rows(list(MPA1, MPA2, MPA3))
 crs <- "+init=epsg:4326"
 
+
 rm(MPA1, MPA2, MPA3)
+
 
 ```
 
@@ -47,12 +49,12 @@ Here is where you would select out just the Marine (2 or the marine and coastal,
 You can also select out just the no take here. 
 ```{r}
 
-MPA_dissolve2 <- ms_simplify(MPA, keep = 0.005,
-                                keep_shapes = FALSE)
-MPA_dissolve2$ID <- as.character(1:nrow(MPA_dissolve2))
+MPA$to_dissolve <- "A"
+MPA_dissolve <- MPA %>% group_by(to_dissolve) %>% summarize()
+MPA_dissolve <- st_transform(MPA_dissolve, crs = st_crs(crs))
 
-ggplot() + 
-  geom_sf(data = MPA_dissolve2, aes(fill = ID))
+#ggplot() + 
+  #geom_sf(data = MPA_dissolve2, aes(fill = ID))
 
 Mode <- function(x) {
  ux <- unique(x)
@@ -61,7 +63,8 @@ Mode <- function(x) {
 
 ```
 
-##which gridcells overlap with an MPA (and what is the area of that gridcell that contains and MPA)
+##which gridcells overlap with an MPA 
+(and what is the area of that gridcell that contains and MPA)
 
 ```{r}
 grid <- read_sf(here("./Data/spatial/worldsq_EA.shp"))
@@ -70,12 +73,12 @@ grid <- read_sf(here("./Data/spatial/worldsq_EA.shp"))
 grid <- st_transform(grid, crs = st_crs(crs))
 
 #this tells you which gridcells intersect with an MPA and what area of the gridcell is covered 
-grid_intersection <- st_intersection(grid, MPA_dissolve2) %>% 
+grid_intersection <- st_intersection(grid, MPA_dissolve) %>% 
   group_by(Seq) %>% 
-  summarise(geom = st_union(geometry), MPA_ID = Mode(ID)) %>%
+  summarise(geom = st_union(geometry)) %>%
   mutate(geom = st_sfc(geom),
          area = st_area(geom))
-rm(MPA_dissolve2)
+#rm(MPA_dissolve2)
 grid_intersection$status <- "protected" #lets us know that those grid cells have some level of MPA wiithin them 
 
 #join this back to the big grid (right now we just have the gridIDs that are overlapping an MPA)
@@ -116,24 +119,53 @@ grid_sp_no_MPA <- grid_sp %>% dplyr::filter(is.na(status))
 grid_MPA <- gridpoints %>% dplyr::filter(status == "protected")
 grid_no_MPA <- gridpoints %>% dplyr::filter(is.na(status))
 
-#within a buffer distance to MPAs
+```
+##proportion calculation 
+realocate grid cells that are MPA to the surrounding cells (depending on size of MPA )
+Problem is the MPA data has a bunch of overlapping feautres so we dissolved earlier 
+now we need to assign every contiguous MPA grid cell a unique group ID 
+```{r}
+
+grid_final_sp <- st_as_sf(gridpoints, coords = c("Lon", "Lat"), crs = st_crs(crs))
+
+grid_sp_MPA_poly <- grid_final_sp %>% 
+  st_make_grid(cellsize = .5) %>% 
+  st_as_sf() %>% 
+  st_join(grid_sp)%>% filter(status == "protected") 
+
+# ggplot() + geom_sf(grid_sp_MPA, mapping = aes(colour = "point"))+ geom_sf(grid_sp_MPA_poly, mapping = aes(colour = "grid")) 
+
+touching_list = st_touches(grid_sp_MPA_poly) 
+
+g = graph.adjlist(touching_list)
+c = components(g)
+grid_sp_MPA_poly$groups = c$membership
+
+# ggplot() + geom_sf(grid_sp_MPA_poly, mapping = aes(colour = as.factor(groups)))
+
+#join that back to the grid_sp_MPA
+grid_sp_MPA_poly <- as.data.frame(grid_sp_MPA_poly) %>% dplyr::select(Seq, groups)
+
+grid_sp_MPA <- left_join(grid_sp_MPA, grid_sp_MPA_poly, by = "Seq")
 
 buffer <- st_buffer(grid_sp_MPA,.75)
 
 intr <- st_intersection(grid_sp_no_MPA, buffer, sparse = F)
-intr <- intr[colnames(intr) %in% c(colnames(grid_sp_no_MPA), "MPA_ID.1")]
+intr <- intr[colnames(intr) %in% c(colnames(grid_sp_no_MPA), "groups")]
 intr$status <- "surrounding"
 
-ggplot() + geom_sf(buffer, mapping = aes(colour = "buffer")) + #geom_sf(subset(grid2, grid2$status == "protected"), mapping = aes(fill = protected_area_m2))+ geom_sf(grid_intersection, mapping = aes(colour = "MPA")) + geom_sf(intr, mapping = aes(colour = "surrounding")) 
+# ggplot() + geom_sf(buffer, mapping = aes(colour = "buffer")) + geom_sf(subset(grid2, grid2$status == "protected"), mapping = aes(fill = protected_area_m2))+ geom_sf(grid_intersection, mapping = aes(colour = "MPA")) + geom_sf(intr, mapping = aes(colour = as.factor(groups)))
 
-dist_touching <-intr
-dist_touching <- dist_touching %>% add_count(MPA_ID.1) %>% mutate("prop" = (1/n) + 1) #this is the gridcell with an MPA that they are closest to 
+
+
+
+
+#now do the proportion calculation
+
+intr <- intr %>% add_count(groups) %>% mutate("prop" = (1/n) + 1) #this is the gridcell with an MPA that they are closest to 
+
 
 ```
-
-
-
-#ookay that seemed to work 
 
 
 #### Clean up the dataset 
@@ -145,10 +177,10 @@ grid_MPA$status <- "protected"
 names <- c("Seq", "Lat", "Lon", "area", "status", "prop", "protected_area_m2")
 
 grid_MPA <- grid_MPA[colnames(grid_MPA) %in% names]
-dist_touching <- as.data.frame(dist_touching)
-dist_touching <- dist_touching[colnames(dist_touching) %in% names]
+intr <- as.data.frame(intr)
+intr <- intr[colnames(intr) %in% names]
 
-pt <- rbind(as.data.frame(dist_touching), as.data.frame(grid_MPA))
+pt <- rbind(as.data.frame(intr), as.data.frame(grid_MPA))
 
 gridpoints <- gridpoints[colnames(gridpoints) %in% c("Seq","Lon", "Lat")]
 
