removed the 100 - SR

--- a/Scripts/data_preparation.Rmd
+++ b/Scripts/data_preparation.Rmd
@@ -27,12 +27,12 @@ sf::sf_use_s2(use_s2 = FALSE)
 ## load the data into R 
 
 ```{r}
-MPA1 <- read_sf(here("./Data/Spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_0/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
+MPA1 <- read_sf("/Users/sarahroberts/Documents/ClimateOceanPlanning/R/mpa_cc_toe_old/Data/Spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_0/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp")
 #plot(MPA1)
 
-MPA2 <- read_sf(here("./Data/Spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_1/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
+MPA2 <- read_sf(here("/Users/sarahroberts/Documents/ClimateOceanPlanning/R/mpa_cc_toe_old/Data/Spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_1/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
 
-MPA3 <- read_sf(here("./Data/Spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_2/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
+MPA3 <- read_sf("/Users/sarahroberts/Documents/ClimateOceanPlanning/R/mpa_cc_toe_old/Data/Spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_2/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp")
 
 MPA <- dplyr::bind_rows(list(MPA1, MPA2, MPA3))
 crs <- "+init=epsg:4326"
@@ -40,7 +40,11 @@ crs <- "+init=epsg:4326"
 
 rm(MPA1, MPA2, MPA3)
 
+MPA <- MPA %>% sample_frac(.02)
 
+MPA1 <- read_sf("/Users/sarahroberts/Documents/mpa_ubc_project/Data/Coastal_Marine_in27.shp")
+#plot(MPA1)
+MPA1 <- MPA1 %>% dplyr::filter(MARINE == 2)
 ```
 
 #dissolve so that they are not overlapping 
@@ -78,6 +82,9 @@ grid_intersection <- st_intersection(grid, MPA_dissolve) %>%
   summarise(geom = st_union(geometry)) %>%
   mutate(geom = st_sfc(geom),
          area = st_area(geom))
+
+
+grid <- grid 
 #rm(MPA_dissolve2)
 grid_intersection$status <- "protected" #lets us know that those grid cells have some level of MPA wiithin them 
 
@@ -141,7 +148,8 @@ g = graph.adjlist(touching_list)
 c = components(g)
 grid_sp_MPA_poly$groups = c$membership
 
-# ggplot() + geom_sf(grid_sp_MPA_poly, mapping = aes(colour = as.factor(groups)))
+cols = rainbow(314, s=.6, v=.9)[sample(1:314,314)] 
+ggplot() + geom_sf(grid_sp_MPA_poly, mapping = aes(colour = as.factor(groups)))+ scale_colour_manual(values=cols)+ theme(legend.position="none")
 
 #join that back to the grid_sp_MPA
 grid_sp_MPA_poly <- as.data.frame(grid_sp_MPA_poly) %>% dplyr::select(Seq, groups)
@@ -154,7 +162,7 @@ intr <- st_intersection(grid_sp_no_MPA, buffer, sparse = F)
 intr <- intr[colnames(intr) %in% c(colnames(grid_sp_no_MPA), "groups")]
 intr$status <- "surrounding"
 
-# ggplot() + geom_sf(buffer, mapping = aes(colour = "buffer")) + geom_sf(subset(grid2, grid2$status == "protected"), mapping = aes(fill = protected_area_m2))+ geom_sf(grid_intersection, mapping = aes(colour = "MPA")) + geom_sf(intr, mapping = aes(colour = as.factor(groups)))
+ggplot() + geom_sf(buffer, mapping = aes(colour = "buffer")) + geom_sf(subset(grid2, grid2$status == "protected"), mapping = aes(fill = protected_area_m2))+ geom_sf(grid_intersection, mapping = aes(colour = "MPA")) + geom_sf(intr, mapping = aes(colour = as.factor(groups)))
 
 
 
@@ -162,7 +170,13 @@ intr$status <- "surrounding"
 
 #now do the proportion calculation
 
-intr <- intr %>% add_count(groups) %>% mutate("prop" = (1/n) + 1) #this is the gridcell with an MPA that they are closest to 
+grid_sp_MPA <- grid_sp_MPA %>% add_count(groups) 
+grid_sp_MPA$mpa_n <- grid_sp_MPA$n
+grid_sp_MPA1 <- as.data.frame(grid_sp_MPA) %>% dplyr::select(groups, mpa_n) %>% ungroup() %>% distinct()
+
+intr <- left_join(intr, grid_sp_MPA1, by = "groups")
+
+intr <- intr %>% add_count(groups) %>% mutate("prop" = ((mpa_n/n)/100) + 1) #this is the gridcell with an MPA that they are closest to 
 
 
 ```
@@ -188,7 +202,7 @@ gridpoints <- gridpoints[colnames(gridpoints) %in% c("Seq","Lon", "Lat")]
 grid_final <- left_join(gridpoints, pt, by = c("Seq","Lon", "Lat"))
 grid_final <- grid_final %>% distinct() #some of the 
 
-#grid_final %>% dplyr::filter(status %in% c("protected", "surrounding")) %>% ggplot() + geom_point(aes(x = Lon, y = Lat, colour = as.factor(prop)))
+grid_final %>% dplyr::filter(status %in% c("protected", "surrounding")) %>% ggplot() + geom_point(aes(x = Lon, y = Lat, colour = prop))
 
 write.csv(grid_final, here("./Data/mpa_scenarios/grid_all_mpas.csv"))
 ```
