--- a/Scripts/data_preparation.Rmd
+++ b/Scripts/data_preparation.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 ```{r setup, include = F}
-source(here::here('./Functions/function_list.R'))
+source(here::here('./functions/function_list.R'))
 
 load_pkg(c(
   # For grid estimation and species selection
@@ -22,6 +22,14 @@ sf::sf_use_s2(use_s2 = FALSE)
 select <- dplyr::select
 
 
+# File path for dealing with multiple computers accessing data folder
+if(Sys.info()[8] == "jepa88"){
+  root_path <- "~/OneDrive - UBC/Data/mpa_cc_toe/"
+}else{
+  root_path <- "/Users/sarahroberts/Documents/ClimateOceanPlanning/R/mpa_cc_toe_old" # SARAH MAKE SURE THIS PATH MAKES SENSE
+}
+
+
 ```
 
 # Identify grids that are MPAs or surrounding an MPA
@@ -29,12 +37,12 @@ select <- dplyr::select
 ## load the data into R 
 
 ```{r}
-MPA1 <- read_sf("/Users/sarahroberts/Documents/ClimateOceanPlanning/R/mpa_cc_toe_old/Data/Spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_0/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp")
+MPA1 <- read_sf(paste0(root_path,"/data/spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_0/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
 #plot(MPA1)
 
-MPA2 <- read_sf(here("/Users/sarahroberts/Documents/ClimateOceanPlanning/R/mpa_cc_toe_old/Data/Spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_1/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
+MPA2 <- read_sf(paste0(root_path,"/data/spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_1/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
 
-MPA3 <- read_sf("/Users/sarahroberts/Documents/ClimateOceanPlanning/R/mpa_cc_toe_old/Data/Spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_2/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp")
+MPA3 <- read_sf(paste0(root_path,"/data/spatial/WDPA_WDOECM_Jul2022_Public_marine_shp/WDPA_WDOECM_Jul2022_Public_marine_shp_2/WDPA_WDOECM_Jul2022_Public_marine_shp-polygons.shp"))
 
 MPA <- dplyr::bind_rows(list(MPA1, MPA2, MPA3))
 crs <- "+init=epsg:4326"
@@ -75,7 +83,7 @@ end-beg
 (and what is the area of that gridcell that contains and MPA)
 
 ```{r}
-grid <- read_sf(here("./data/spatial/worldsq_EA.shp"))
+grid <- read_sf(paste0(root_path,"data/spatial/worldsq_ea/worldsq_EA.shp"))
 
 #convert grid coordinate system to be same as lat long WGS_1984
 grid <- st_transform(grid, crs = st_crs(crs)) %>% 
@@ -123,7 +131,7 @@ grid2 <- st_as_sf(grid2)
 #that looks like it worked to me. 
 
 #we can join back to the gridPoints file for the next step 
-gridpoints <- read.csv(here("./data/spatial/lon_lat_dbem.txt"), header = FALSE)
+gridpoints <- read.csv(paste0(root_path,"/data/spatial/lon_lat_dbem.txt"), header = FALSE)
 colnames(gridpoints) <- c("Seq", "Lon", "Lat")
 gridpoints <- left_join(gridpoints, grid3, by = c("Seq","Lat","Lon"))
 
@@ -241,7 +249,7 @@ grid_final <-
   mutate (prop = ifelse(status %in% "protected" | status %in% "surrounding", prop,1))
 
 
-write.csv(grid_final_area, here("./data/mpa/grid_all_mpas_b.csv"))
+write.csv(grid_final_area, paste0(root_path,"/data/mpa/grid_all_mpas_b.csv"))
 
   ggplot(grid_final_area) +
     geom_histogram(aes(x = prop))
@@ -256,7 +264,7 @@ grid_final_area %>%
     )
   )
 
-write.csv(grid_final, here("./data/mpa/grid_all_mpas.csv"))
+write.csv(grid_final, paste0(root_path,"/data/mpa/grid_all_mpas.csv"))
 ```
 
 
@@ -267,7 +275,7 @@ In the DBEM, MPA algorithm works as a multiplier of fishing effort so protected 
 
 ```{r}
 # Load all MPAs dataset
-grid_all_mpas <- read_csv("../data/mpa/grid_all_mpas.csv")
+grid_all_mpas <- read_csv(paste0(root_path,"/data/mpa/grid_all_mpas.csv"))
 
 
 
@@ -299,7 +307,7 @@ ggplot() +
 
 
 
-name <- paste0(here("data/mpa/mpa_index"),".txt")
+name <- paste0(root_path,"data/mpa/mpa_index",".txt")
 write.table(mpa_index, file=name, sep="\t", col.names = F, row.names = F)
 
 
