--- a/Scripts/data_preparation.Rmd
+++ b/Scripts/data_preparation.Rmd
@@ -270,6 +270,7 @@ In the DBEM, MPA algorithm works as a multiplier of fishing effort so protected 
 
 ```{r}
 
+
 #MPA metadata
 grid_meta <- read_csv(paste0(root_path,"/data/mpa/grid_all_mpas.csv"))
 
@@ -279,20 +280,23 @@ grid_mpa <- read.csv(paste0(root_path,"/data/mpa/mpa_index.txt"), header = F) %>
 
 head(grid_mpa)
 
+
 bind_cols(grid_meta,grid_mpa) %>% 
-  # mutate()
+  filter(fmort < 1) %>%
   ggplot() +
   geom_tile(
     aes(
       x = lon,
       y = lat,
-      fill = fmort,
-      col = fmort
+      fill = status,
+      col = status
     )
   ) +
-  scale_fill_viridis_b() +
-  scale_color_viridis_b() +
-  facet_wrap(~status)
+  # scale_fill_gradient(low = "yellow", high = "red", na.value = NA) +
+  # scale_color_gradient(low = "yellow", high = "red", na.value = NA)
+  scale_fill_viridis_d() +
+  scale_color_viridis_d() #+
+# facet_wrap(~status)
 
 ```
 
